Fix measures display on mobile.

--- a/src/css/measures.less
+++ b/src/css/measures.less
@@ -6,6 +6,10 @@
     font-size: 15px;
     padding: 25px;
     margin-bottom: 24px;
+
+    @media @mobile {
+      padding: 16px;
+    }
   }
 
   h2 {
@@ -21,12 +25,24 @@
     .display-flex;
     // border-top: 1px solid @df-light-gray;
 
+    @media @mobile {
+      display: block;
+    }
+
     & > div {
       .flex(0 0 50%);
       padding: 0 25px;
 
+      @media @mobile {
+        padding: 15px 0 0;
+      }
+
       &:first-child {
         border-right: 1px solid @df-light-gray;
+
+        @media @mobile {
+          border-right: none;
+        }
       }
     }
   }
